feat: remove company-specific application assumptions
